# openrtc-python

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  codecov.yml  package-lock.json  package.json  pyproject.toml
.agents/skills/openrtc-python/: SKILL.md
.agents/skills/openrtc-python/references/: api.md  providers.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy-docs.yml  docs.yml  lint.yml  test.yml
docs/: changelog.md  cli.md  examples.md  getting-started.md  index.md  turboquant-gpu-feasibility.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/api/: pool.md
docs/concepts/: architecture.md
docs/deployment/: github-pages.md
examples/: main.py
examples/agents/: dental.py  restaurant.py
examples/frontend/: README.md  package-lock.json  package.json
examples/frontend/app/: app.css  root.tsx  routes.ts
examples/frontend/app/components/: demo-call-page.tsx
examples/frontend/app/components/agents-ui/: agent-audio-visualizer-wave.tsx  agent-chat-transcript.tsx  agent-session-provider.tsx
examples/frontend/app/routes/: api.token.ts  dentist.tsx  home.tsx  restaurant.tsx
src/openrtc/: __init__.py  cli.py  cli_app.py  cli_livekit.py  cli_params.py  cli_types.py  metrics_stream.py  pool.py  provider_types.py  resources.py  tui_app.py
src/openrtc_python/: __init__.py
tests/: conftest.py  test_cli.py  test_discovery.py  test_metrics_stream.py  test_pool.py  test_resources.py  test_routing.py  test_tui_app.py
