[project]
name = "openrtc"
dynamic = ["version"]
description = "Run multiple LiveKit voice agents in a single shared worker process."
readme = "README.md"
authors = [
    { name = "Mahimai Raja J", email = "hello@mahimai.dev" }
]
keywords = ["webrtc", "realtime", "audio", "openrtc", "livekit", "agents", "ai"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]
license = "MIT"
requires-python = ">=3.10,<3.14"
dependencies = [
    "livekit-agents[openai,silero,turn-detector]~=1.4",
]

[project.urls]
Homepage = "https://github.com/mahimailabs/openrtc"
Repository = "https://github.com/mahimailabs/openrtc"
Issues = "https://github.com/mahimailabs/openrtc/issues"

[project.scripts]
openrtc = "openrtc.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
root = "."


[tool.pyright]
typeCheckingMode = "off"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
    "C901",
    "W191",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openrtc"]
